export interface IDataLabelContent 
{
    classes: Array<string>;
    label: string;
    x: number;
    y: number;
}

