export interface IDataStyle {
    name: string;
}
