import { IRnaMolecules } from '../rnaInput';

export interface IRnaComplexes {
    name: string;
    rnaMolecules: Array<IRnaMolecules>;
}

